<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:padding="16dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/addOrRemoveFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addOrRemoveFriends"
        android:text="Add/Remove Friend" />

    <TextView
        android:id="@+id/hiddenId"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:text="TextView"
        android:visibility="invisible"
        tools:visibility="invisible" />

</LinearLayout>